--- a/web/coming-soon.xhtml
+++ b/web/coming-soon.xhtml
@@ -33,7 +33,7 @@
 		<!---start-content -->
 		<div class="content">
 			<h:graphicImage value="/resources/images/logo.png" />
-			<h1>قادمون قريبا</h1>
+			<h1>سنعود قريبا</h1>
 		</div>
 		<!---End-content -->
 		<!---728x90 -->
@@ -63,8 +63,7 @@
 			</div>
 
 			<div align="center" class="employment">
-				<p>للتوظيف</p>
-				<a href="mailto:career@qetaa.com">career@qetaa.com</a>
+				<p>نعمل لخدمتكم بشكل أفضل</p>
 			</div>
 		</div>
 
@@ -84,7 +83,7 @@
 		<!---728x90 -->
 		<!---start-copy-right -->
 		<div align="center" class="copy-right">
-			<p>&copy; 2017 قطع.كوم</p>
+			<p>&copy; 2019 قطع.كوم</p>
 		</div>
 		<!---End-copy-right -->
 	</div>
@@ -95,7 +94,7 @@
 	<br />
 	<script>
 		// Set the date we're counting down to
-		var countDownDate = new Date("Dec 1, 2017 00:00:00").getTime();
+		var countDownDate = new Date("Jul 1, 2019 00:00:00").getTime();
 
 		// Update the count down every 1 second
 		var countdownfunction = setInterval(function() {
